@startuml DomainModel
!include astah-min.puml
scale 0.3

class User {
    +Id: int
    +Name: string
    +Password: string
}
class Post
{
    +Id: int
    +Title: string
    +Content: string
    +AuthorId: int
}
class Comment
{
    +Id: int
    +AuthorId: int
    +PostId: int
    +Content: string
}

Post "*" --> "1" User : made by
Comment "*" --> "1" User : written by
Comment "*" --> "1" Post : on

@enduml